--- a/bitrix/templates/main/1-1otdel.html
+++ b/bitrix/templates/main/1-1otdel.html
@@ -470,7 +470,7 @@
                                 </ul>
                               </div>
                             </div>
-                            <div class="btn js-expand"><span>Смотреть все 118 услуг</span></div>
+                            <div class="btn light js-expand"><span>Смотреть все 118 услуг</span></div>
                           </div>
                         </div>
                       </div>
@@ -1127,7 +1127,7 @@
               <div class="title h2">Спасибо за обращение!</div><i class="small-link pop-close closePopup"></i>
             </div>
             <div class="modal-container-content">
-              <div class="text primary">Ваше сообщение успешно отправлено. Наш оператор свяжется с вами в ближайшее время для уточнения деталей.</div>
+              <div class="text">Ваше сообщение успешно отправлено. Наш оператор свяжется с вами в ближайшее время для уточнения деталей.</div>
             </div>
           </div>
         </div>
