--- a/src/pug/1-1otdel.pug
+++ b/src/pug/1-1otdel.pug
@@ -149,7 +149,7 @@ block content
 													a(href="#").text Магнитно-резонансная томография всего позвоночника (всех отделов)
 												li
 													a(href="#").text Магнитно-резонансная томография головного мозга
-									.btn.js-expand
+									.btn.light.js-expand
 										span Смотреть все 118 услуг
 							//- .service-items
 							//- 	.service-item
