--- a/src/pug/_layout.pug
+++ b/src/pug/_layout.pug
@@ -32,5 +32,6 @@ html(lang="ru")
 
 
 		script(src="js/lib.min.js")
+		script(async='', defer='', src='https://maps.googleapis.com/maps/api/js?key=AIzaSyDcFkgUmSnM7fy40cDnRn8BB_xu1cp7Ros&callback=initMap')
 		script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.60/jquery.form-validator.min.js")
 		script(src="js/common.min.js")
