--- a/src/pug/includes/_header.pug
+++ b/src/pug/includes/_header.pug
@@ -187,7 +187,7 @@ include _mixins.pug
 					a(href="#").text.blk Контакты
 					.tel-wrap
 						.tel-item
-							a(href="tel:84959561767").text-sm.text-sm Регистратура
+							a(href="tel:84959561767").text-sm Регистратура
 							a(href="tel:84959561767").tel-item-tel +7 (495) 956-17-67
 							a(href="tel:84959561767").tel-item-tel +7 (495) 956-17-67
 							a(href="tel:84959561767").tel-item-tel +7 (495) 956-17-67
