--- a/src/pug/1-1otdel.pug
+++ b/src/pug/1-1otdel.pug
@@ -296,23 +296,7 @@ block content
 								.aside-wrapp
 									.aside-menu
 										.aside-menu-inner
-											.diplom-slider-content
-												.diplom-slider-inner
-													a(href="img/big.jpg",data-sub-html='<div class="text bold">Сертификат качества3</div><p class="text2">Выдан специалисту высшего разряда</p>').diplom-slider-inner-img
-														img(data-lazy="img/document.jpg", alt="fsdfsd")
-														.text-sm Лицензия на предоставление медицинских услуг
-													a(href="img/big.jpg",data-sub-html='<div class="text bold">Сертификат качества1</div><p class="text2">Выдан специалисту высшего разряда</p>').diplom-slider-inner-img
-														img(data-lazy="img/document.jpg", alt="fsdfsd")
-														.text-sm Лицензия на предоставление медицинских услуг
-													a(href="img/big.jpg",data-sub-html='<div class="text bold">Сертификат качества31</div><p class="text2">Выдан специалисту высшего разряда</p>').diplom-slider-inner-img
-														img(data-lazy="img/document.jpg", alt="fsdfsd")
-														.text-sm Лицензия на предоставление медицинских услуг
-												.arr-wrap
-													.arr-wrap-inner
-														.slider-counter
-															.slider-curr
-															.slider-divider /
-															.slider-total
+											include includes/_dipslider.pug
 
 									.aside-content
 										.title.h2 Дополнительная информация
